# bishe_agent

./: .env.example  .gitignore  README.md  coding_plan.md  legal_multi_agent_design.md
algorithm/: README.md  pyproject.toml
algorithm/app/: __init__.py  main.py
algorithm/app/api/: health.py  internal.py  router.py
algorithm/app/core/: __init__.py  config.py  database.py  logging.py  security.py
algorithm/app/graph/: __init__.py  labor_consultation.py
algorithm/app/integrations/: __init__.py  errors.py  milvus_client.py  minio_client.py  redis_client.py
algorithm/app/mcp_tools/: __init__.py  document_parse.py  ocr_extract.py  source_verify.py
algorithm/app/model_gateway/: __init__.py  client.py
algorithm/app/repositories/: __init__.py  case_repository.py  evidence_repository.py  template_repository.py
algorithm/app/retrieval/: __init__.py  bm25.py  corpus.py  hybrid.py  labor_law.py  labor_precedent.py  labor_template.py  reranker.py  schema_mapping.py  tokenizer.py  types.py
algorithm/app/retrieval/data/: labor_knowledge.json
algorithm/app/safety/: __init__.py  policy.py
algorithm/app/schemas/: __init__.py  internal.py
algorithm/app/services/: __init__.py  audit_logger.py  labor_deadline.py
algorithm/app/workers/: __init__.py
algorithm/scripts/: import_knowledge.py
algorithm/tests/: test_health.py  test_m3_internal.py  test_m5_retrieval.py
docs/: m1_infrastructure.md  m5_rag_knowledge.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
infra/: README.md  docker-compose.yml
(+65 files in other folders)
