[project]
name = "legal-assistant-algorithm"
version = "0.1.0"
description = "Algorithm and agent service for the legal multi-agent assistant."
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.4.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langgraph>=0.2.0",
    "minio>=7.2.0",
    "paddleocr>=2.8.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pymilvus>=2.4.0",
    "pymysql>=1.1.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "rank-bm25>=0.2.2",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "structlog>=24.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
